Alignment fixes

--- a/static/less/account-reconciliation.less
+++ b/static/less/account-reconciliation.less
@@ -92,33 +92,21 @@
       padding: 10px 0 20px;
     }
 
-    .amount {
-      .sl-sb;
-      line-height: 20px;
-      color: @pineGreen80;
-      text-align: right;
-    }
-
-    .amount-header {
-      color: @white;
-      text-align: right;
-    }
-
-    .sl-note {
-      padding-top: 10px;
-    }
-
     table {
       th {
         .sl-sm-sb;
         color: @white;
         background-color: @burntOrange100;
       }
-      td, td.amount {
+
+      td {
         .sl-sm-sb;
         background-color: @burntOrange10;
       }
-      .amount
+
+      .amount {
+        text-align: right;
+      }
     }
   }
 
