--- a/static/less/push-to-card.less
+++ b/static/less/push-to-card.less
@@ -98,10 +98,11 @@
 			}
 
 			.section-title {
-				border-top: none;
+        border-top: none;
 
 				.title-wrapper {
 					opacity: 0;
+          border-top: none;
 				}
 			}
 		}
